--- a/Ficha 3/Ex3/F3_Ex3.html
+++ b/Ficha 3/Ex3/F3_Ex3.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <title>Ficha 3 - Ex 3</title>
     <link rel="stylesheet" type="text/css" href="F3_Ex3CSS.css">
+    <script src="F3_Ex3script.js"></script>
 </head>
 <body>
-<div>
-<img src="New-Super-Mario-Bros-Art-21-400x400.jpg">
+<div style="text-align: center">
+    <img src="New-Super-Mario-Bros-Art-21-400x400.jpg">
+    <div>
+    <button onclick="escondeMostra()">Esconde/Mostra</button>
+    <button onmouseover="esconde()">Esconde(Espaço)</button>
+    <button id="botao">Mostra</button>
+    </div>
 </div>
-<button onclick="escondeMostra()">Esconde/Mostra</button>
-<button>Esconde(Espaço)</button>
-<button>Mostra</button>
 </body>
 </html>
