--- a/Ficha 3/Ex3/F3_Ex3.html
+++ b/Ficha 3/Ex3/F3_Ex3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div style="text-align: center">
-    <img src="New-Super-Mario-Bros-Art-21-400x400.jpg">
+    <img src="../../Ficha%204/Ex%202/New-Super-Mario-Bros-Art-21-400x400.jpg">
     <div>
     <button onclick="escondeMostra()">Esconde/Mostra</button>
     <button onmouseover="esconde()">Esconde(Espaço)</button>
